[tool.poetry]
name = "repl_nix_fmsback"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
cloudinary = "^1.32.0"
Django = "^4.1.7"
django-filter = "^23.1"
djangorestframework = "^3.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
